# api/src/controller/http/auth/response/auth.v1.response.ts
@@ -1,0 +1,1 @@
+export interface GoogleSignInV1Response {}
